[metadata]
name = pysrl
version = 0.3.6
author = Lukas Hunold
author_email = lukashunold@web.de
license = MIT License
platform = any
description = "ProSRL Datenanalyse mit Python (pysrl) - 0.3.6 - 23/07/22"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lukas2357/pysrl
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    beautifulsoup4
    bs4
    kaleido
    matplotlib
    mechanize
    pandas
    scikit-learn
    scipy
    seaborn
    plotly
    regex
    statsmodels
    Pillow
    openpyxl

[options.packages.find]
where = src
